fix point list horizontal scrollbar on width < 1340px

--- a/static/style/style.css
+++ b/static/style/style.css
@@ -120,3 +120,11 @@ select::-ms-expand {
 #table-data tr.current {
     background-color: #e1e1e1;
 }
+
+/* -----------------------------------------------------------------------------------------------------------------*/
+
+@media screen and (max-width: 1340px) {
+    .scrollbar-fix {
+        display: none;
+    }
+}
